--- a/test/unit_qml/qtquicktest.qrc
+++ b/test/unit_qml/qtquicktest.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>tst_Client.qml</file>
+        <file>tst_CollectionModel.qml</file>
     </qresource>
 </RCC>
